scribble-assertions/src/test/resources/good/extensions/assertions/DifferentConstraintInChoice.scr
module good.extensions.assertions.DifferentConstraintInChoice;


type <java> "java.lang.Integer" from "rt.jar" as Int;


// Using different constraints in choice
global protocol Prot(role A, role B)
{
	choice at A {
	//[x<10]
	MSG1(x:Int) from A to B;  @(x < 10);
	
	} or {
	//[y>10]
	MSG2(y:Int) from A to B;  @(y > 10);
	}
}